--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,27 @@ spring:
     url: jdbc:postgresql://localhost:5435/postgres
     username: postgres
     password: postgres
+    initialization-mode: always
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    to:
+    username:
+    password:
+    protocol: smtp
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL94Dialect
     show-sql: true
     hibernate:
       ddl-auto: update
+sql:
+  init:
+    data-locations: data.sql
+    mode: always
