--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5435/postgres
-    username: postgres
-    password: postgres
-
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQL94Dialect
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5435/postgres
+#    username: postgres
+#    password: postgres
+#
+#  jpa:
+#    database-platform: org.hibernate.dialect.PostgreSQL94Dialect
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
